Fix Jumping content on homepage.

--- a/src/components/Hero.scss
+++ b/src/components/Hero.scss
@@ -41,11 +41,11 @@
       }
 
       @media (max-width: 390px) {
-        min-height: 190px;
+        min-height: 210px;
       }
 
       @media (max-width: 350px) {
-        min-height: 210px;
+        min-height: 220px;
       }
     }
 
